[gd_scene load_steps=2 format=3 uid="uid://trlnhcw3lqtl"]

[ext_resource type="Script" path="res://Scripts/failed_state_handler.gd" id="1_e4110"]

[node name="FailedStateHandler" type="Node2D"]
script = ExtResource("1_e4110")

[node name="Panel" type="Panel" parent="."]
visible = false
z_index = 10
offset_right = 320.0
offset_bottom = 180.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
z_index = 10
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -140.0
offset_top = -55.0
offset_right = 140.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
z_index = 10
layout_mode = 2
text = "You failed at pleasing the gods!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalCountLabel" type="Label" parent="Panel/VBoxContainer"]
z_index = 10
layout_mode = 2
text = "Final Score : 0 Orders Completed"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackToMenu" type="Button" parent="Panel/VBoxContainer"]
z_index = 10
layout_mode = 2
text = "Back to menu"

[node name="Exit" type="Button" parent="Panel/VBoxContainer"]
z_index = 10
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="Panel/VBoxContainer/BackToMenu" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Exit" to="." method="_on_button_quit_pressed"]
